2011-07-05  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* Delete ItkToolbox/ItkKernelTransform.cpp:

	- Its functionality is now part of ItkPSTransform.cpp.

	* ItkToolbox/CMakeLists.txt:

	- Add compilation and installation of itk_pstransform.

	- Remove itk_kernel_transform, that is now part of
	itk_pstransform.

	* ItkToolbox/ItkPSTransform.cpp:

	- (v0.1.0) Basic code to replicate the functionality of
	ItkKernelKernelTransform.cpp, but with the infrastructure to make
	it possible to add the bpline warping method. As an improvement
	over ItkKernelKernelTransform.cpp, now it's possible to give the
	point coordinates as a double or a single in Matlab.

	* ItkToolbox/BaseFilter.hpp:

	- (v0.3.1) Rename FilterType as BaseFilterType so that it's
	clearer and doesn't clash with the derived classes.

	- Empty constructor now goes in the header.

	- Regroup protected members.

	* ItkToolbox/BaseFilter.cpp:

	- (v0.3.1) Remove constructor's code, as it's empty and can go in
	the header.

2011-07-04  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* ItkToolbox/CMakeLists.txt:

	- ItkToolbox/ArgumentParsers.cpp has been deleted.

	* Delete ItkToolbox/ArgumentParsers.cpp,
	ItkToolbox/ArgumentParsers.hpp:

	- Move all the code to ItkImFilter.cpp.

	- The parsers are not going to be general functions, but specific
	to the mexFunction() calling them. In addition, it makes the code
	more readable if we have all the pipeline from input argument
	parsing to filter running in the ItkImFilter.cpp file.

	* ItkToolbox/ArgumentParsers.cpp, ItkToolbox/ArgumentParsers.hpp:

	- (v0.3.0) Reorder input arguments in the parsers, so that they
	reflect the order in which they are processed: input image, output
	images, filter name.

	* ItkToolbox/ItkImFilter.cpp:

	- (v0.3.9) Paste all the code that used to be in
	ItkToolbox/ArgumentParsers.cpp.

	- (v0.3.8) Reorder input arguments in ArgumentParsers.hpp.

2011-06-19  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* ItkToolbox/ItkKernelTransform.cpp:
